--- a/global.css
+++ b/global.css
@@ -3,4 +3,17 @@
 
 body {
     font-family: 'poppins',sans-serif;
+    min-height: 100vh;
+   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #dadfe8;
+}
+
+.pokedex {
+    
+    display: flex;
+    gap: 30px;
+    padding: 30px 0;
 }
